--- a/rootdir/etc/init.Msm8917Parts.rc
+++ b/rootdir/etc/init.Msm8917Parts.rc
@@ -27,3 +27,9 @@ on boot
   chmod 0660 /sys/devices/platform/kcal_ctrl.0/kcal_min
   chmod 0660 /sys/devices/platform/kcal_ctrl.0/kcal_val
   chown 0660 /sys/devices/platform/kcal_ctrl.0/kcal_invert
+  
+#Tourch permissions
+	chown system system /sys/class/leds/S2MU005_FLASH_LED/brightness
+	chown system system /sys/class/leds/S2MU005_TORCH_LED/brightness
+#	chown 0660 /sys/class/leds/S2MU005_FLASH_LED/brightness
+#	chown 0660 /sys/class/leds/S2MU005_TORCH_LED/brightness
